--- a/admin/index.html
+++ b/admin/index.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <title>Heladerias CABA</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-        
+        <link href="../assets/animate.css" type="text/css" rel="stylesheet">
         <link href="../assets/styles.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     </head>
@@ -33,7 +33,7 @@
                 <a href="#" class="btn azul">Agregar</a>
             </div>
             <div id="listado">
-                <p>Cargando</p>
+                <p id="load" class="animated zoomIn">Cargando</p>
             </div>
         </div>
     </div>
