--- a/admin/index.html
+++ b/admin/index.html
@@ -28,8 +28,10 @@
                     <input class="input" id="form_field_description" type="text" name="description" placeholder="Description">
                     <input class="input" id="form_field_type" type="text" name="type" placeholder="Tipo">
                     <input class="input" id="form_field_id" type="hidden" name="id" placeholder="ID">
-                  <br>  <button class="form_submit" class="btn azul" type="submit">Enviar</button>
+                  <br>  <button class="form_submite" id="editar" class="btn azul" type="submit">Editar</button>
+                  <br>  <button class="form_submita" id="agregar" class="btn azul" type="submit">Agregar</button>
                 </form>
+
             </div>
             <div id="btn_agregar_wrapper">
                 
