--- a/admin/index.html
+++ b/admin/index.html
@@ -12,6 +12,10 @@
         <link href="../assets/animate.css" type="text/css" rel="stylesheet">
         <link href="../assets/styles.css" type="text/css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+        <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+      />
 
     </head>
 
@@ -43,6 +47,21 @@
                 <p id="load" class="zoomIn">Cargando</p>
             </div>
         </div>
+      
+        <div id="aviso">
+            <img src="../assets/img/checked.png">
+            <br>
+            <p> Realizado con exito</p>
+        </div>
+
+        <div id="borrar">
+        
+            <p>¿Seguro que queres borrarla?</p>
+            <button id="si" class="bo">Si</button>
+            <button id="no" class="bo">No</button>
+        </div>
+
+
     </div>
 
     <script src="../utils/api.js"></script>
