--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <!DOCTYPE html>
 <html lang="es">
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-        <title>Heladerias de CABA gordi</title>  
-        <link rel="shortcut icon" type="image/png" href="../assets/img/fav.ico">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
-        <link href="assets/styles.css" type="text/css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    </head>
-    <body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <title>Heladerias de CABA gordi</title>
+  <link rel="shortcut icon" type="image/png" href="../assets/img/fav.ico">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+  <link href="assets/styles.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+</head>
+
+<body>
 
 
-<div id="map"></div>
 
-<div id="menu">
-    <a href="" class="baratas"> <img src="assets/img/baratas.png"> <figure>Baratas</figure> </a>
-    <a href="" class="chetas"> <img src="assets/img/chetas.png"> <figure>Chetas</figure> </a>
-    <a href="" class="veganas"> <img src="assets/img/veganas.png"> <figure>Veganas</figure> </a>
-    <a href="" class="sinTacc"> <img src="assets/img/sinTacc.png"> <figure>Sin Tacc</figure> </a>
 
-    
-</div>
+  <div id="map"></div>
 
-<!--<div class="column">
+  <div id="menu">
+    <a href="" class="baratas"> <img src="assets/img/baratas.png">
+      <figure>Baratas</figure>
+    </a>
+    <a href="" class="chetas"> <img src="assets/img/chetas.png">
+      <figure>Chetas</figure>
+    </a>
+    <a href="" class="veganas"> <img src="assets/img/veganas.png">
+      <figure>Veganas</figure>
+    </a>
+    <a href="" class="sinTacc"> <img src="assets/img/sinTacc.png">
+      <figure>Sin Tacc</figure>
+    </a>
+
+
+  </div>
+
+  <!--<div class="column">
     <p class="bd-notification is-danger">Agregar Heladerias</p>
     <br>
     <div class="columns is-mobile">
@@ -48,9 +57,10 @@
 
 
 
-<script src="assets/mapStyles.js"></script>
-<script src="assets/main.js"></script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeWXseIVXxPlvpniACQWgThEdPBQE1wR8&callback=initMap"></script>
+  <script src="assets/mapStyles.js"></script>
+  <script src="assets/main.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBeWXseIVXxPlvpniACQWgThEdPBQE1wR8&callback=initMap"></script>
 
 </html>
 </body>
