responsive y funcionalidad del $no

--- a/admin/index.html
+++ b/admin/index.html
@@ -55,7 +55,7 @@
         <div id="borrar">
 
             <p>¿Seguro que queres borrarla?</p>
-            <button id="si" class="bo">Si</button>
+            <button id="si" data-id="" class="bo ">Si</button>
             <button id="no" class="bo">No</button>
         </div>
 
